--- a/apache-config/.htaccess
+++ b/apache-config/.htaccess
@@ -16,7 +16,7 @@ RewriteRule ^api/simple-backend$ simple-backend-test.php?api_path=simple-backend
 RewriteRule ^api/minimal$ minimal-backend-index.php?api_path=minimal [L,QSA]
 
 # Handle API requests - Route to secure backend outside public_html
-RewriteRule ^api/(.*)$ ../backend/public/index.php?api_path=$1 [L,QSA]
+RewriteRule ^api/(.*)$ /domains/gamca-wafid.com/backend/public/index.php?api_path=$1 [L,QSA]
 
 # Fallback: If secure backend is not available, use minimal backend (for debugging)
 # RewriteRule ^api/(.*)$ minimal-backend-index.php?api_path=$1 [L,QSA]
